--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
     "cSpell.words": [
         "arison",
+        "bglh",
+        "caldaquente",
+        "Casquinhas",
+        "Chiquinho",
         "Contatos",
         "conteudo",
+        "ctap",
         "reisss"
     ]
 }
